--- a/.gitattributes
+++ b/.gitattributes
@@ -1,18 +1,15 @@
 # Set default behavior for text files
 * text=auto
-
 # Specify LF for YAML files
 *.yml text eol=lf
 *.yaml text eol=lf
-
 # Set default behavior for all text files
 * text=auto
-
 # Specify LF for the Dockerfile
 Dockerfile text eol=lf
-
 # Set default behavior for text files
 * text=auto
-
 # Specify LF for Terraform files
 *.tf text eol=lf
+*.exe filter=lfs diff=lfs merge=lfs -text
+.terraform/providers/registry.terraform.io/hashicorp/alicloud/1.232.0/windows_amd64/terraform-provider-alicloud_v1.232.0.exe filter=lfs diff=lfs merge=lfs -text
